2008-11-26  Sancho Lerena  <slerena@artica.es>

	* godmode/agentes/configurar_agente.php: Fixed problem with agent module
	groups. 
	
2009-11-17  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/pt_BR.mo, include/languages/fr.po,
	  include/languages/uk.mo, include/languages/ro.mo,
	  include/languages/ca.po, include/languages/sv.po,   
	  include/languages/de.po, include/languages/zh_TW.po,
	  include/languages/hi.po, include/languages/zh_CN.po,
	  include/languages/fr.mo, include/languages/te.po,
	  include/languages/eu.po,  include/languages/hu.po,
	  include/languages/ca.mo, include/languages/de.mo,   
	  include/languages/sv.mo, include/languages/ru.po, 
	  include/languages/zh_TW.mo, include/languages/hi.mo,
	  include/languages/zh_CN.mo, include/languages/gl.po,
	  include/languages/te.mo, include/languages/eu.mo,
	  include/languages/hu.mo,  include/languages/pl.po,  
	  include/languages/it.po, include/languages/sl.po,
	  include/languages/ru.mo, include/languages/pt.po,   
	  include/languages/ast.po, include/languages/gl.mo: Updated
	  translations from rosetta: thanks to all contributors.

2008-11-13  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/manage_config.php: Removed reference to
	tagent_data_image which was not allowing to delete an agent.

2008-11-11  Sancho Lerena <slerena@artica.es>

	* extensions/update_manager/lib/libupdate_manager_client.php:
	Connection XML/RPC timeout incremented to 10.

	* godmode/agentes/agent_disk_conf_editor.php: Warning for
	usage of enterprise feature without have enterprise version.

2008-11-10  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident.php
	operation/incidents/incident_detail.php: Fixed some bugs in
	incident management that makes unusable the incident sytem
	Thanks to Esben for reporting this bug that was introduced
	only few days before closing 2.0 version :( 

        * include/funcions_db.php: Reference to inexistant table